test/fail_compilation/diag9723.d
// REQUIRED_ARGS: -main
/*
TEST_OUTPUT:
---
fail_compilation/diag9723.d(9): Error: -main switch already added a stub main function
---
*/

void main()
{
}
